--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-jsx-a11y": "^6.4.1",
     "eslint-plugin-react": "^7.23.2",
-    "eslint-plugin-react-hooks": "^4.2.0"
+    "eslint-plugin-react-hooks": "^4.2.0",
+    "@babel/eslint-parser": "^7.13.14"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -51,7 +52,6 @@
   },
   "devDependencies": {
     "@babel/core": "^7.14.0",
-    "@babel/eslint-parser": "^7.13.14",
     "@babel/plugin-syntax-jsx": "^7.12.13",
     "@babel/preset-react": "^7.13.13",
     "eslint": "^7.26.0",
