--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "react-responsive-carousel": "^3.2.18",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "^1.1.5",
+    "react-scripts": "^4.0.3",
     "redux": "^4.1.0",
     "web-vitals": "^1.1.2"
   },
@@ -55,10 +55,10 @@
     "@babel/preset-react": "^7.13.13",
     "@testing-library/react": "^11.2.7",
     "eslint": "^7.26.0",
+    "react-test-renderer": "^17.0.1",
     "stylelint": "^13.13.1",
     "stylelint-config-standard": "^21.0.0",
     "stylelint-csstree-validator": "^1.9.0",
-    "stylelint-scss": "^3.19.0",
-    "react-test-renderer": "^17.0.1"
+    "stylelint-scss": "^3.19.0"
   }
 }
